overflow + fix w/h of cell

--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,13 @@ body {
 	background-color: #29a036; /*#eaf0f2;*/
 	border-radius: 10px;
 	text-align: center;
-	min-height: 240px;
-	max-height: 240px;
+	padding: 15px;
 }
 
 .status-cell-content {
-	padding: 15px;
+	min-height: 240px;
+	max-height: 240px;
+	overflow: hidden;
 }
 
 .status-message {
